--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "jquery": "^3.1.1",
     "live-server": "^1.1.0",
     "node-libs-browser": "^1.0.0",
     "webpack": "^1.13.2"
