--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "live-server": "^1.1.0",
     "node-libs-browser": "^1.0.0",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "moment": "^2.15.1"
   }
 }
